2002-04-23  Steffen Macke <sdteffen@web.de>

	* plug-ins/xfig/xfig-import.c: fixed text import
	
2002-04-22  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/export_png.c: Moved dialog functions to their own file.
	* app/dialogs.[ch]: New files with standard functions for creating
	small, transient dialogs (e.g. export options).
	* app/Makefile.am: Added dialogs.[ch]

2002-04-19  Steffen Macke <sdteffen@web.de>

	* shapes/Misc/folder.*:
	* shapes/Misc/file.*:
	* shapes/Misc/Makefile.am:
	* shapes/Makefile.am:
	* sheets/Misc.sheet.in:
	* sheets/Makefile.am:
	* configure.in: added new Misc sheet containing filesystem shapes
	
2002-04-18  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/lineprops_area.c: Arrow selector in toolbox changed to use
	standard arrowdraw code.  Line is thinner to make some arrowheads
	distinguishable. 

2002-04-18  Steffen Macke <sdteffen@web.de>

	* sheets/network.sheet.in:
	* shapes/network/telephone.shape:
	* shapes/network/Makefile.am: added telephone shape
	
2002-04-16  Steffen Macke <sdteffen@web.de>

	* sheets/EML.sheet.in: commented out unavailable shapes
	
2002-04-15  M.C. Nelson <mcn@kobayashimaru.org>

	* app/sheets_dialog_callbacks.c:  Fixed segfault caused by mis-ordered
	  variable assignment.
	
2002-04-15  Steffen Macke <sdteffen@web.de>

	* plug-ins/dxf/dxf-import.c: text import works again
	* shapes/Pneumatic/Makefile.am: added compush shape
	* sheets/Pneumatic.sheet.in: commented out unavailable shapes dist33
	and dist53
	
2002-04-11  M.C. Nelson <mcn@kobayashimaru.org>

	* All these modifications are for the 'Sheets and Objects' dialog
	  (new feature):

	* app/pixmaps/line_break.xpm: new icon representing a line break.
	
	* app/pixmaps/n_a.xpm: new empty icon representing not available.

	* app/Makefile.am: added sheets_*.[ch] files to compile list.
	
	* app/menus.c: added GNOME and gtk menu items for 'Sheets and Objects'
	